fix: add footer z-index

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,6 +3,7 @@
   position: sticky;
   bottom: 0;
   background-color: inherit;
+  z-index: 20;
 
   &__container {
     max-width: 396px;
